fix alignment for kitchen duty panel

--- a/assets/style.css
+++ b/assets/style.css
@@ -115,7 +115,6 @@
 
 #kd {
 	font-size: 1.5em;
-	padding-left: 5em;
 }
 
 #kd-list {
